--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
             <version>18</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.fxmisc.richtext</groupId>
+            <artifactId>richtextfx</artifactId>
+            <version>0.11.2</version>
+        </dependency>
+
 
     </dependencies>
 
